Refactor use cases and enhance group management features
- Split `GroupManagementUseCase` and `UserManagementUseCase` into granular interfaces (ISP)
- Implement user search functionality:
    - Add `SearchUsersUseCase` and API endpoint
    - Add `searchByNicknameContaining` to repositories
    - Integrate user search in `CreateGroupModal` and `InviteMemberModal` with debouncing
- Update `CreateGroupUseCase` to support adding initial members
- Implement group deletion feature:
    - Add `DeleteGroupUseCase` and API endpoint
    - Add cascade delete for group members in schema
    - Add delete button in `GroupDetailPage`
- Move repository interfaces from application to domain layer
- Add `TestAuthController` for local/dev environments
- Update tests to reflect architectural changes